Prevent the logo from overflowing the slim nav

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1255,6 +1255,7 @@ section:focus >,
     box-shadow: none;
   }
   .navbar-brand-logo {
+    max-height: 100%;
     max-width: 155px;
     min-height: 45px;
   }
